components/website-cms/security-groups.tf
###
# AWS EC2 Security Group
###

resource "aws_security_group" "website-cms-lb" {
  name        = "website-cms-lb"
  description = "Ingress - Load Balancer"
  vpc_id      = aws_vpc.website-cms.id

  ingress {
    protocol    = "tcp"
    from_port   = 22
    to_port     = 22
    cidr_blocks = ["0.0.0.0/0"] #tfsec:ignore:AWS008
  }

  ingress {
    protocol    = "tcp"
    from_port   = 80
    to_port     = 80
    cidr_blocks = ["0.0.0.0/0"] #tfsec:ignore:AWS008
  }

  ingress {
    protocol    = "tcp"
    from_port   = 443
    to_port     = 443
    cidr_blocks = ["0.0.0.0/0"] #tfsec:ignore:AWS008
  }

  ingress {
    protocol    = "tcp"
    from_port   = var.app_port
    to_port     = var.app_port
    cidr_blocks = ["0.0.0.0/0"] #tfsec:ignore:AWS008
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"] #tfsec:ignore:AWS009
  }

  tags = {
    CostCenter = "website-cms"
  }
}

# Traffic to the ECS cluster should only come from the ALB
resource "aws_security_group" "ecs_tasks" {
  name        = "cms-ecs-tasks-security-group"
  description = "allow inbound access from the ALB only"
  vpc_id      = aws_vpc.website-cms.id

  ingress {
    protocol        = "tcp"
    from_port       = var.app_port
    to_port         = var.app_port
    security_groups = [aws_security_group.website-cms-lb.id]
  }

  egress {
    protocol    = "-1"
    from_port   = 0
    to_port     = 0
    cidr_blocks = ["0.0.0.0/0"] #tfsec:ignore:AWS009
  }
}


###
# AWS RDS Security Group
###
# Traffic to the DB should only come from ECS
resource "aws_security_group" "website-cms-database" {
  name        = "website-cms-database"
  description = "Ingress - RDS instance"
  vpc_id      = aws_vpc.website-cms.id

  ingress {
    protocol    = "tcp"
    from_port   = 5432
    to_port     = 5432
    security_groups = [
      aws_security_group.ecs_tasks.id
    ]
  }

  tags = {
    CostCenter = "website-cms"
  }
}

resource "aws_security_group_rule" "website-cms-egress_database" {
  description              = "Security group rule for DB egress"
  type                     = "egress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  security_group_id        = aws_security_group.ecs_tasks.id
  source_security_group_id = aws_security_group.website-cms-database.id
}
